# museum_book_prototype

./: .gitignore  README.md  config.yaml  install.sh  manual.odt  pyproject.toml
src/arduino/: arduino.ino  switch_read.ino
src/museum_book_prototype/: __main__.py  app.py  parse.py  serial_receiver.py  switch_states.py  video_stream.py
